# music_rack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
crates/app/: Cargo.toml
crates/app/src/: audio.rs  engine_link.rs  keyboard.rs  lib.rs  midi.rs  patch_io.rs
crates/app/src/ui/: knob.rs  mod.rs  rack.rs  theme.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  messages.rs  meters.rs  modules.rs  plan.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: env.rs  lib.rs  math.rs  polyblep.rs  smooth.rs  svf.rs
crates/engine/: Cargo.toml
crates/engine/src/: buffer.rs  executor.rs  lib.rs
crates/engine/src/modules/: adsr.rs  arp.rs  clock.rs  clockdiv.rs  cvutil2.rs  delay.rs  dynamics2.rs  filters2.rs  filters3.rs  funcgen.rs  fx.rs  fx2.rs  lfo.rs  macro_osc.rs  mixer.rs  mod.rs  noise.rs  note_in.rs  osc2.rs  output.rs  quantizer.rs  random.rs  route.rs  seq2.rs  seq3.rs  seq8.rs  sources2.rs  timbre.rs  timefx.rs  util.rs  util2.rs  vca.rs  vcf.rs  vco.rs  wtvco.rs
crates/engine/tests/: poly_voice.rs  sequencer_patch.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs  persist.rs  plan.rs  subpatch.rs
crates/worklet/: Cargo.toml
crates/worklet/src/: lib.rs
web/: app-test.mjs  app.html  index.html  smoke-test.mjs  tc-polyfill.js  worklet-shim.js
web/tests/: batch4-test.mjs  catalog-test.mjs  copytest.mjs  eqfix-test.mjs  group-io.mjs  group-knob.mjs  grouptest.mjs  macro-test.mjs  meters-test.mjs  newmods-test.mjs  persist-test.mjs  piano-test.mjs  qol-test.mjs  rack-test.mjs  shot2.mjs  showcase-test.mjs  stage4.mjs
