[package]
name = "rack-app"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rack-core = { workspace = true }
rack-graph = { path = "../graph" }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioContextState",
    "AudioDestinationNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "MessageEvent",
    "MessagePort",
    "MidiAccess",
    "MidiInput",
    "MidiInputMap",
    "MidiMessageEvent",
    "MidiOptions",
    "Navigator",
    "Request",
    "Response",
    "Storage",
    "Url",
    "Window",
    "console",
]
